# ChainedIn

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
ChainedIn/: .env.example  .gitignore  CLAUDE.md  README.md  auth.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.ts  tsconfig.tsbuildinfo
ChainedIn/app/: globals.css  layout.tsx  page.tsx
ChainedIn/app/admin/badges/: page.tsx
ChainedIn/app/api/badges/: route.ts
ChainedIn/app/api/nis2/: route.ts
ChainedIn/app/api/scans/: route.ts
ChainedIn/app/api/software/: route.ts
ChainedIn/app/badges/: page.tsx
ChainedIn/app/dashboard/: page.tsx
ChainedIn/app/directory/: page.tsx
ChainedIn/app/login/: page.tsx
ChainedIn/app/nis2/: page.tsx
ChainedIn/app/register/: page.tsx
ChainedIn/app/scans/: page.tsx
ChainedIn/app/search/: page.tsx
ChainedIn/app/settings/: page.tsx
ChainedIn/app/stacks/: page.tsx
ChainedIn/app/vendors/: page.tsx
ChainedIn/components/: copy-button.tsx  cve-charts.tsx  dev-switcher.tsx  nav.tsx  search-bar.tsx  severity-badge.tsx  sidebar.tsx  sign-out-button.tsx
ChainedIn/components/ui/: badge.tsx  dialog.tsx
ChainedIn/lib/: auth-guard.ts  cve-service.ts  nvd-client.ts  scan-plain-language.ts  trust-score.ts  utils.ts
ChainedIn/prisma/: schema.prisma  seed-data.ts  seed.ts
ChainedIn/prisma/prisma/: dev.db
scanner/: cli.py  models.py  report.py
scanner/advisories/: osv.py  vulners.py
scanner/parsers/: __init__.py  base.py  cargo.py  composer.py  go.py  maven.py  npm.py  python.py
(+36 files in other folders)
