[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chainedIn"
version = "0.1.0"
description = "Supply-chain dependency vulnerability scanner powered by OSV and Vulners"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "cvss>=3.2",
    "vulners>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.25.0",
]

[project.scripts]
chainedIn = "scanner.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["scanner"]
